# Cart_OnePiece

./: README.md  Task  draft_5_1_1_scenario_definition.md  edit_image.py  generate_timeline.py
Antigravity_Starpu_UsageTest/tools/starpu_adv_pipeline/: CMakeLists.txt  README.md  kernels.cu  main.cpp  prep_kernel.cu
Cart-OnePiece_Antigravity_C++/: CMakeLists.txt  build_and_run_notes.md  main.cpp
Cart-OnePiece_Antigravity_C++/Papers/A_Systematic_Mapping_Study_of_Autonomous_Vehicles_Prototypes__Trends_and_Oportunities/: Main.tex  references.bib
Cart-OnePiece_Antigravity_C++/Papers/IEEE_International_Conference_on_Consumer_Electronics__ICCE_/: IEE Internation Conference.tex  references.bib
Cart-OnePiece_Antigravity_C++/Papers/IISWC_2025_Submission/: Artigo.tex  iiswc24.cls  iiswc24example.tex  reference.bib
Cart-OnePiece_Antigravity_C++/Tese_Ericson/: main.tcp  main.tex  main.tps  makefile  ref.bib
Cart-OnePiece_Antigravity_C++/Tese_Ericson/apresentacao/: apresentacao.odp
Cart-OnePiece_Antigravity_C++/Tese_Ericson/imagens/: build_client_server_diagram.py  build_generic_workflow.py  build_generic_workflow_v2.py  build_generic_workflow_v3.py  build_methodology_png.py  build_methodology_png_perfect.py  build_methodology_png_v3.py  build_methodology_png_v4.py  build_methodology_png_v5.py  build_pipeline_architecture.py  build_pipeline_architecture_v2.py  build_pipeline_architecture_v3.py  build_pipeline_architecture_v4.py  build_proposta_pipeline_png.py  build_server_lifecycle_diagram.py  generate_diagrams.py  generic_workflow.tex  generic_workflow_refined.tex  generic_workflow_v3.tex  methodology_stages.tex
Cart-OnePiece_Antigravity_C++/Tese_Ericson/include/: abnt-PPGInf-PUCMG.sty  abnt-alf.bst  abnt-num.bst  abnt.cls  abntcite.sty  abntex-abrev-pt_BR.def  abntex-abrev.sty  acronym.sty  nbr10520-2002.def  nbr10522-1988.def  references_materials.bib
Cart-OnePiece_Antigravity_C++/Tese_Ericson/pos-texto/: anexo.tex  apendiceA.tex
Cart-OnePiece_Antigravity_C++/Tese_Ericson/pre-texto/: abstract.tex  agradecimentos.tex  dedicatoria.tex  epigrafe.tex  ficha-catalografica.tex  folha-aprovacao.tex  lista-siglas.tex  resumo.tex
Cart-OnePiece_Antigravity_C++/Tese_Ericson/texto/: 1-introducao.tex  2-background.tex  3-arte.tex  3-metodologia.tex  4-metodologia.tex  4-proposta.tex  5-Cart_OnePiece.tex  5-conclusoes.tex  6-schedule.tex
Cart-OnePiece_Antigravity_C++/backup/: main.cpp.20260210200313.bak  main.cpp.20260211171451.bak  main.cpp.20260211193000.bak  main.cpp.20260212_222300.bak  main.cpp.async_failed.bak  main.cpp.crash_fix.bak  main.cpp.perf_fix.bak
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/: .gitignore  CMakeLists.txt  README.md  backtrace.txt  build_log.txt  debug_1000_fixed_spawn1.txt  debug_1000_fixed_spawn2.txt  debug_500.txt  debug_500_fixed.txt  debug_500_fixed_spawn.txt  debug_500_fixed_spawn10.txt  debug_500_fixed_spawn11.txt  debug_500_fixed_spawn12.txt  debug_500_fixed_spawn2.txt  debug_500_fixed_spawn3.txt  debug_500_fixed_spawn4.txt  debug_500_fixed_spawn5.txt  debug_500_fixed_spawn6.txt  debug_500_fixed_spawn7.txt  debug_500_fixed_spawn8.txt  debug_500_fixed_spawn9.txt  debug_500_full.txt  debug_apex.txt  debug_exact.txt  debug_out.txt  debug_output_run.txt  patch_trt.sh  test.c  test_script.sh  verify_fix.txt
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/apps/: carla_gt_stream_smoke.cpp  carla_rgb_stream_smoke.cpp  client_smoke.cpp  dataset_sanity.cpp  debug_gt.cpp  pipeline_direct.cpp  pipeline_starpu.cpp  preprocess_smoke.cpp  profile_client_stub.cpp  starpu_smoke.cpp  sync_smoke.cpp  trt_smoke.cpp
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/custom_sched_rr_workers/: CMakeLists.txt
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/include/: frame_sync.hpp  metrics.hpp  pipeline_types.hpp  postprocess.hpp  preprocess.hpp  semantic_decode.hpp  starpu_codelets.hpp  starpu_runtime.hpp  tensor_stats.hpp  trt_runner.hpp  viewer_sdl2.hpp  vis.hpp
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/: screenshot_gui.py
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/20260308_162545_dataset_cityscapes_hrnet_direct/sanity_dataset/: meta.json
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/20260308_202632_profile_cityscapes_hrnet_direct/starpu_traces/20260308_202707_cityscapes_hrnet_direct_dmda/02_graphviz/: dag.dot
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/20260308_202632_profile_cityscapes_hrnet_direct/starpu_traces/20260308_202707_cityscapes_hrnet_direct_dmda/09_papi/: papi.rec
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/20260308_202632_profile_cityscapes_hrnet_direct/starpu_traces/20260308_202707_cityscapes_hrnet_direct_dmda/11_memory/: cache.txt  workers.txt
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/result_example/20260308_202632_profile_cityscapes_hrnet_direct/starpu_traces/20260308_202707_cityscapes_hrnet_direct_dmda/summary/: cmd.txt  env.txt
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/src/: frame_sync.cpp  metrics.cpp  postprocess.cpp  preprocess.cpp  semantic_decode.cpp  starpu_codelets.cpp  starpu_runtime.cpp  tensor_stats.cpp  trt_runner.cpp  viewer_sdl2.cpp  vis.cpp
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/tests/: preprocess_unit_test.cpp
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/tools/: check_gt.py  check_movement.py  export_starpu_csv.sh  generate_dummy_model.py  generate_real_models.py  gui_launcher.py  inspect_trt.cpp  inspect_trt.py  kill_server.sh  merge_scripts.py  monitor_split.sh  onnx_to_engine.py  run_full_demo.sh  run_pipeline.sh  run_pipeline_direct.sh  run_profiled_single_machine.sh  run_server.sh  run_verify_demo.sh  summarize_run.py  tab_test.py  test_display.sh  test_fix.sh  test_real.sh  verify_profiling.sh  verify_seg.py
Cart-OnePiece_Antigravity_C++/starpu_adv_pipeline_client/tools/train_seg/: dataset.py  download_pretrained.py  export.py  export_custom.py  model.py  train.py
(+617 files in other folders)
